# AgentAutopsy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  _copy_logo.py  _profile_readme.md  _push_profile.py  action.yml  agentautopsy.db  agentautopsy.db-journal  agentautopsy.db-shm  agentautopsy.db-wal  agentautopsy_report.html  bandit.json  copy-result.txt  demo_agent.py  do_copy.py  pyproject.toml  research_agent.py  run_copy.py  seed_fix.py
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml
agentautopsy-action/: action.yml  entrypoint.sh
agentautopsy-vscode/: agentautopsy-0.1.0.vsix  package-lock.json  package.json
agentautopsy-vscode/src/: diagnostics.ts  extension.ts  panel.ts  pythonBridge.ts
src/agentautopsy/: __init__.py  alerts.py  analyzer.py  api.py  auto.py  autofix.py  cache.py  cassette.py  checkpoint.py  cli.py  context_monitor.py  crewai_handler.py  db.py  detector.py  dvr_replay.py  eval_generator.py  github_pr.py  interceptor.py  langchain_handler.py  langgraph_handler.py  loop_detector.py  mcp_handler.py  mcp_interceptor.py  pruner.py  replay.py  reporter.py  schema_drift.py  share.py  topology.html  ui.py
src/agentautopsy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: dummy_mcp_server.py  test_analyzer.py  test_api.py  test_autofix.py  test_context_monitor.py  test_crewai.py  test_day7.py  test_dvr_replay.py  test_eval_generator.py  test_full_pipeline.py  test_http_error.py  test_langgraph.py  test_loop_detector.py  test_mcp_handler.py  test_mcp_interceptor.py  test_schema_drift.py  test_smoke.py
