[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentautopsy"
version = "0.8.0"
description = "When your agent fails, this tells you exactly why."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Abhishek Patel" }]
keywords = ["ai-agents", "debugging", "llm", "observability"]
dependencies = [
    "openai",
    "anthropic",
    "sqlite-utils",
    "sqlite-vec",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/Abhisekhpatel/AgentAutopsy"

[project.scripts]
agentautopsy = "agentautopsy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentautopsy"]
