[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentautopsy"
version = "2.0.0"
description = "Post-mortem debugger for AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Abhishek Patel" }]
keywords = ["ai-agents", "debugging", "llm", "observability"]
dependencies = [
    "openai",
    "anthropic",
    "sqlite-utils",
    "sqlite-vec",
    "httpx",
    "requests",
]

[project.urls]
Homepage = "https://github.com/Abhisekhpatel/AgentAutopsy"

[project.scripts]
agentautopsy = "agentautopsy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
disable_error_code = [
    "union-attr",
    "method-assign",
    "import-untyped",
    "arg-type",
    "attr-defined",
    "assignment",
    "import-not-found",
    "return-value",
    "valid-type",
    "name-defined",
    "used-before-def",
    "no-untyped-def",
]

[tool.bandit]
skips = ["B608", "B310", "B105", "B110", "B404", "B603", "B607"]
